# de-hiring-take-home

./: .dockerignore  .gitignore  Dockerfile  Instructions.md  QUESTION.md  README.md  extractor.py  loader.py  main.py  pyproject.toml  transformer.py
src/etl_pipeline/: __init__.py  __main__.py  config.py  extractor.py  loader.py  models.py  pipeline.py  transformer.py  utils.py
tests/: test_extractor.py  test_loader.py  test_transformer.py
